# cpp_projects

./: .gitignore
2d_fractals/: CMakeLists.txt  README.md  vcpkg.json
2d_fractals/src/: CMakeLists.txt  application.cc  application.h  main.cpp
2d_fractals/src/2d_fractal_scenes/: CMakeLists.txt
2d_fractals/src/2d_fractal_scenes/include/: dragon_curve_scene.h  hilbert_scene.h  koch_snowflake_scene.h  scene.h  serpinsky_scene.h  square_diamond_scene.h
2d_fractals/src/2d_fractal_scenes/src/: dragon_curve_scene.cc  hilbert_scene.cc  koch_snowflake_scene.cc  scene.cc  serpinsky_scene.cc  square_diamond_scene.cc
2d_fractals/src/2d_fractals/: CMakeLists.txt
2d_fractals/src/2d_fractals/include/: cpu_geometry.h  dragon_curve.h  fractal_math.h  hilbert_curve.h  koch_snowflake.h  serpinsky_triangle.h  squares_and_diamonds.h
2d_fractals/src/2d_fractals/src/: cpu_geometry.cc  dragon_curve.cc  fractal_math.cc  hilbert_curve.cc  koch_snowflake.cc  serpinsky_triangle.cc  squares_and_diamonds.cc
2d_fractals/src/gl_shapes/: CMakeLists.txt
2d_fractals/src/gl_shapes/src/: square.cc
2d_fractals/src/gl_wrapper/: CMakeLists.txt
2d_fractals/src/gl_wrapper/include/: gpu_geometry.h  shader.h  shader_program.h  vertex_array.h  vertex_buffer.h
2d_fractals/src/gl_wrapper/src/: debug.cc  gpu_geometry.cc  handle.cc  shader_program.cc  vertex_array.cc
2d_fractals/src/shaders/: test.frag
2d_fractals/test/: CMakeLists.txt
2d_fractals/test/2d_fractals/: CMakeLists.txt  fractal_math.test.cc  serpinsky_triangle.test.cc  squares_and_diamonds.test.cc
c-compiler/: analyze.c  analyze.h  cgen.c  code.c  code.h  globals.h  grammer.txt  main.c  meson.build  parser.y  scan.h  scan.l  symtab.c  symtab.h  test.CM  util.c  util.h
c-compiler/test/: call2.CM  conditionals.CM  loop.CM  main_only.CM  recursion.CM
cpu_raytracer/: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cpu_raytracer/shaders/: phong.vert
cpu_raytracer/src/: CMakeLists.txt  callbacks.cc  callbacks.h  image_buffer.cc  image_buffer.h  lighting.h  main.cc  material.cc  material.h  ray_trace.cc  ray_trace.h  readme.md  scene.cc  scene.h
cpu_raytracer/src/gl_wrapper/: CMakeLists.txt  README.md
cpu_raytracer/src/gl_wrapper/include/: index_buffer.h  shader.h  surface.h  vertex_buffer.h
cpu_raytracer/src/gl_wrapper/src/: buffer_layout.cc  debug.cc  index_buffer.cc  renderer.cc  surface.cc  type_to_gl_map.cc
cpu_raytracer/src/glfw_wrapper/include/: callback_interface.h
cpu_raytracer/src/glfw_wrapper/src/: callback_interface.cc  scene.cc  window.cc
cpu_raytracer/src/models/: CMakeLists.txt
cpu_raytracer/src/models/include/: camera.h  curve.h  grid_outline.h  revolved_surface.h
cpu_raytracer/src/models/src/: 3d_surface_algorithms.cc  camera_orientation.cc  grid_outline.cc
curve_generation/: CMakeLists.txt  README.md  vcpkg.json
curve_generation/cmake/: CompilerWarnings.cmake
curve_generation/shaders/: test.frag  test.vert
curve_generation/src/: CMakeLists.txt  callbacks.cc  callbacks.h  curve_scene.cc  curve_scene.h  main.cc  surface_scene.cc  surface_scene.h
curve_generation/src/gl_wrapper/: CMakeLists.txt
curve_generation/src/gl_wrapper/include/: debug.h  index_buffer.h  renderer.h  shader_program.h  surface.h  texture.h  type_to_gl_map.h
curve_generation/src/gl_wrapper/src/: handle.cc  index_buffer.cc  line.cc  renderer.cc  shader_program.cc  surface.cc  texture.cc
curve_generation/src/glfw_wrapper/include/: callback_interface.h
curve_generation/src/glfw_wrapper/src/: window.cc
curve_generation/src/models/: CMakeLists.txt
curve_generation/src/models/include/: 2d_curve_algorithms.h  3d_surface_algorithms.h  camera.h  colours.h  grid.h  orientation.h
curve_generation/src/models/src/: 2d_curve_algorithms.cc  camera.cc  grid.cc  orientation.cc  revolved_surface.cc
planetarium/: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
planetarium/shaders/: phong.frag  simple.frag  simple.vert
planetarium/src/: CMakeLists.txt  callbacks.cc  callbacks.h  main.cc  planetoid.cc  planetoid.h  sphere.cc  sphere.h  transform.cc  transform.h
planetarium/src/gl_wrapper/: CMakeLists.txt
planetarium/src/gl_wrapper/include/: buffer_layout.h  handle.h  line.h  mesh_point.h  point.h  renderer.h  shader_program.h  vertex_array.h
planetarium/src/gl_wrapper/src/: line.cc  shader.cc  shader_program.cc  texture.cc  vertex_array.cc  vertex_buffer.cc
planetarium/src/glfw_wrapper/: CMakeLists.txt
planetarium/src/glfw_wrapper/include/: scene.h  window.h
planetarium/src/glfw_wrapper/src/: window.cc
planetarium/src/models/: CMakeLists.txt
planetarium/src/models/include/: camera_controller.h  camera_orientation.h
planetarium/src/models/src/: camera.cc  camera_controller.cc  curve.cc
recursive_decent_calculator/: main.cc  meson.build  test.txt
simple_spaceship_game/: CMakeLists.txt  README.md  vcpkg.json
simple_spaceship_game/shaders/: test.vert
simple_spaceship_game/src/: CMakeLists.txt  main.cc  window.cc  window.h
simple_spaceship_game/src/gl_shapes/: CMakeLists.txt
simple_spaceship_game/src/gl_shapes/include/: square.h  triangle.h
simple_spaceship_game/src/gl_shapes/src/: triangle.cc
simple_spaceship_game/src/gl_wrapper/: CMakeLists.txt  README.md
simple_spaceship_game/src/gl_wrapper/include/: gpu_geometry.h  handle.h  shader_program.h
simple_spaceship_game/src/gl_wrapper/src/: gpu_geometry.cc  handle.cc  shader_program.cc  texture.cc  vertex_buffer.cc
simple_spaceship_game/test/: CMakeLists.txt
